<resources>
    <string name="app_name">Android Projects</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="less_score_string">Sorry You Failed!</string>
    <string name="you_have_to_practice_more">You have to practice more</string>
    <string name="kotlin_quiz">Kotlin Quiz</string>
    <string name="question">Question</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="emoji">😂😂</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">You can use email, or you can continue with your social account.</string>
    <string name="use_email">Use Email</string>
    <string name="basic">Basic Projects</string>
    <string name="advance">Advance Projects</string>
    <string name="intermediate">Intermediate Projects</string>
    <string name="project_screenshots">Project ScreenShots</string>
    <string name="get_source_code">Get Source Code</string>
    <string name="question_text">What is your name?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="question_number">01/10</string>
    <string name="project_name">Project Name</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="pop_up_menu">Pop-Up Menu</string>
    <string name="person_name">Person Name</string>
    <string name="donate">Donate</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback_or_contact_us">Feedback or Contact Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="check_for_update">Check for Update</string>
    <string name="logout">Logout</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="total_questions">Total Questions:</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="quiz_summary">Quiz Summary</string>
    <string name="good_morning">Hello, Good Morning</string>
    <string name="good_afternoon">Hello, Good Afternoon</string>
    <string name="good_evening">Hello, Good Evening</string>
    <string name="good_night">Hello, Good Night</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="learn">Learn</string>
    <string name="project">Project</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account? Register</string>
    <string name="hello">Hello</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_with">Continue with:</string>
    <string name="reset">Reset</string>
    <string name="longString">When you set long text on textView it measures all of the words and lay’s out the entire text you’ve given it, so this the huge performance hit.

If you’re setting a very long text that then you’re not actually showing on screen may be the user never scrolls.</string>
    <string name="todo_done">Todo/Done</string>

    <string name="notification_channel_id" translatable="false">notification_channel</string>
    <string name="notification_channel_name" translatable="false">thanks</string>
    <string name="notification_channel_description" translatable="false">Thanks For </string>
    <string name="feed_articles">Feed Articles</string>
    <string name="next">Next</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="articles">Articles</string>

    <string name="alertTitle">Info</string>
    <string name="internet_not_connected">Internet Not Available.Please Check Your Connection</string>
</resources>