<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7fafe">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:fontFamily="@font/montserratextrabold"
            android:textSize="@dimen/_30ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:textColor="#ff1744"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/_14ssp"
            android:textColor="#ff1744"
            android:fontFamily="@font/montserratmediumitalic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/use_email"
            android:textColor="#ff1744"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/google_sign_in_btn"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_account"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_16ssp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/create_account"
            android:textColor="#ff1744"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>